fixed code smells detected by sonarcloud